// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-button-group> Component basic usage 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="secondary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--secondary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            About Pega
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component button group quantity 3 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component button group quantity 4 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component button group quantity 5 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="medium"
                   color="primary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
      >
        <button class="c-bolt-button c-bolt-button--medium c-bolt-button--primary c-bolt-button--border-radius-regular c-bolt-button--center"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Learn More
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component content items button group 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
  </ul>
  <bolt-button size="xsmall"
               color="primary"
               width="auto"
               border-radius="full"
               align="center"
               transform="none"
               icon-only
  >
    <button class="c-bolt-button c-bolt-button--xsmall c-bolt-button--primary c-bolt-button--border-radius-full c-bolt-button--center c-bolt-button--icon-only"
            is="shadow-root"
    >
      <ssr-keep for="bolt-button"
                class="c-bolt-button__item"
      >
        Example
      </ssr-keep>
      <ssr-keep for="bolt-button"
                class="c-bolt-button__icon c-bolt-button__icon-sizer"
      >
        <bolt-icon slot="after"
                   name="close"
        >
          <span class="c-bolt-icon c-bolt-icon--close">
            <svg class="c-bolt-icon__icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <path fill="var(--bolt-theme-icon, currentColor)"
                    fill-rule="evenodd"
                    d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
              >
              </path>
            </svg>
          </span>
        </bolt-icon>
      </ssr-keep>
    </button>
  </bolt-button>
  <bolt-button size="xsmall"
               color="secondary"
               width="auto"
               border-radius="regular"
               align="center"
               transform="none"
               icon-only
  >
    <button class="c-bolt-button c-bolt-button--xsmall c-bolt-button--secondary c-bolt-button--border-radius-regular c-bolt-button--center c-bolt-button--icon-only"
            is="shadow-root"
    >
      <ssr-keep for="bolt-button"
                class="c-bolt-button__item"
      >
        About Pega
      </ssr-keep>
      <ssr-keep for="bolt-button"
                class="c-bolt-button__icon c-bolt-button__icon-sizer"
      >
        <bolt-icon slot="after"
                   name="close"
        >
          <span class="c-bolt-icon c-bolt-icon--close">
            <svg class="c-bolt-icon__icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <path fill="var(--bolt-theme-icon, currentColor)"
                    fill-rule="evenodd"
                    d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
              >
              </path>
            </svg>
          </span>
        </bolt-icon>
      </ssr-keep>
    </button>
  </bolt-button>
  <p class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--medium">
    This is text with the tags stripped.
  </p>
</bolt-button-group>
`;

exports[`<bolt-button-group> Component icon only button group 1`] = `
<bolt-button-group bolt-component>
  <ul class="c-bolt-button-group">
    <li class="c-bolt-button-group__item">
      <bolt-button size="xsmall"
                   color="primary"
                   width="auto"
                   border-radius="full"
                   align="center"
                   transform="none"
                   icon-only
      >
        <button class="c-bolt-button c-bolt-button--xsmall c-bolt-button--primary c-bolt-button--border-radius-full c-bolt-button--center c-bolt-button--icon-only"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            Example
          </ssr-keep>
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__icon c-bolt-button__icon-sizer"
          >
            <bolt-icon slot="after"
                       name="close"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
    <li class="c-bolt-button-group__item">
      <bolt-button size="xsmall"
                   color="secondary"
                   width="auto"
                   border-radius="regular"
                   align="center"
                   transform="none"
                   icon-only
      >
        <button class="c-bolt-button c-bolt-button--xsmall c-bolt-button--secondary c-bolt-button--border-radius-regular c-bolt-button--center c-bolt-button--icon-only"
                is="shadow-root"
        >
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__item"
          >
            About Pega
          </ssr-keep>
          <ssr-keep for="bolt-button"
                    class="c-bolt-button__icon c-bolt-button__icon-sizer"
          >
            <bolt-icon slot="after"
                       name="close"
            >
              <span class="c-bolt-icon c-bolt-icon--close">
                <svg class="c-bolt-icon__icon"
                     xmlns="http://www.w3.org/2000/svg"
                     viewbox="0 0 24 24"
                >
                  <path fill="var(--bolt-theme-icon, currentColor)"
                        fill-rule="evenodd"
                        d="M13.4 12l5.3-5.3c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0L12 10.6 6.7 5.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5.3 5.3-5.3 5.3A1 1 0 006 19c.3 0 .5-.1.7-.3l5.3-5.3 5.3 5.3a1 1 0 101.4-1.4L13.4 12z"
                  >
                  </path>
                </svg>
              </span>
            </bolt-icon>
          </ssr-keep>
        </button>
      </bolt-button>
    </li>
  </ul>
</bolt-button-group>
`;
